Update Pessimistic Beliefs ans Accumulation of Assets.ipynb

--- a/Pessimistic Beliefs ans Accumulation of Assets.ipynb
+++ b/Pessimistic Beliefs ans Accumulation of Assets.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pessimistic Beliefsan and Accumulation of Assets"
+    "# Pessimistic Beliefs and Accumulation of Assets"
    ]
   },
   {
